# baos

./: .gitignore  Acknowledgements.txt  CMakeLists.txt  ChangeLog.txt  LICENSE  README.adoc  README.md  Version.txt  build_raspbian.sh  build_unix.sh  index.html
dotnet/: CMakeLists.txt
dotnet/baos/: AssemblyInfo.cpp  BaosConnection.cpp  BaosConnection.h  BaosDatapoint.cpp  BaosDatapoint.h  BaosDatapointDescriptions.cpp  BaosDatapointDescriptions.h  BaosEvent.cpp  BaosEvent.h  BaosHeartbeat.cpp  BaosHeartbeat.h  BaosParameter.cpp  BaosParameter.h  BaosServerItems.cpp  BaosServerItems.h  CMakeLists.txt  Connector.cpp  Connector.h  README.h  StreamConnection.cpp  StreamConnection.h  kdriveBAOS_dotnet.rc
dotnet/core/: kdriveLogger.cpp  kdriveLogger.h  kdriveManagedConfig.h  kdriveManagedInterop.h
kdrive/: CMakeLists.txt
kdrive/include/kdrive/: Config.h  ConfigEnabled.h  Forwards.h  Headers.h  LoggingEnabled.h  kdrive.h
kdrive/include/kdrive/access/: Config.h  Headers.h
kdrive/include/kdrive/access/baos/: BaosKnxPort.h  Headers.h
kdrive/include/kdrive/access/core/: API.h  AccessPacket.h  AccessPort.h  AccessPortFactory.h  ErrorCodes.h  Events.h  Exception.h  Headers.h  KnxPacket.h  KnxPort.h  TransportPacket.h
kdrive/include/kdrive/access/ldm/: LinkLayerManagement.h  LocalDeviceManagement.h  LocalDeviceManagementEmiC.h  LocalDeviceManager.h
kdrive/include/kdrive/access/usb/: Headers.h  UsbPort.h  UsbPortEnumerator.h
kdrive/include/kdrive/baos/: Baos.h  BaosConnection.h  BaosDatapoint.h  BaosDatapointDescriptions.h  BaosEnumerator.h  BaosEvent.h  BaosHeartbeat.h  BaosParameter.h  BaosServerItems.h  BaosTimers.h  Config.h  Headers.h
kdrive/include/kdrive/baos/core/: API.h  BaosConnector.h  BaosPacketFactory.h  BaosProtocolDecoder.h  Core.h  DataPacket.h  ErrorCodes.h  Exception.h  FixPocoException.h  Forwards.h  Headers.h  ServerFunction.h  ServerItem.h  ServiceRunner.h  String.h  Timer.h
kdrive/include/kdrive/baos/ft12/: FT12Connector.h  Headers.h
kdrive/include/kdrive/baos/protocols/: Headers.h  Protocol.h  Protocol12.h  Protocol20.h  Protocol2x.h
kdrive/include/kdrive/baos/services/: GetDatapointDescription.h  GetDatapointValue.h  GetDescriptionString.h  GetParameterByte.h  GetServerItem.h  GetTimer.h  Headers.h  Services.h  SetDatapointHistoryCommand.h  SetDatapointValue.h  SetServerItem.h  SetTimer.h
kdrive/include/kdrive/baos/stream/: Headers.h  Stream.h  StreamConnection.h  StreamConnector.h  StreamConnector12.h  StreamConnector20.h  StreamConnector2x.h
kdrive/include/kdrive/baos/usb/: Headers.h  UsbConnector.h
kdrive/include/kdrive/connector/: CallbackThread.h  Config.h  Connector.h  ConnectorNotificationHandler.h  ErrorCodes.h  Events.h  Forwards.h  Headers.h  Packet.h  PacketFactory.h  PacketNotification.h  PacketTrace.h  QueueConnector.h  ScopedConnectorSignals.h  Semaphore.h  Wait.h
kdrive/include/kdrive/frame/: Config.h  Frame.h
kdrive/include/kdrive/frame/core/: Buffer.h  (+2 more)
kdrive/include/kdrive/ft12/: Config.h  FT12.h  FT12Packetizer.h  Forwards.h  Headers.h
kdrive/include/kdrive/knx/: Config.h  Forwards.h  Headers.h  Knx.h
kdrive/include/kdrive/utility/: Config.h  Forwards.h  Headers.h  Logger.h  LoggerFormatter.h  PropertyCollection.h  ScopedSemaphore.h
kdrive/src/access/baos/: BaosKnxPort.cpp
kdrive/src/access/core/: API.cpp  AccessPacket.cpp  AccessPort.cpp  AccessPortFactory.cpp  Events.cpp  Exception.cpp  KnxPacket.cpp  KnxPort.cpp  TransportPacket.cpp
kdrive/src/access/ldm/: LinkLayerManagement.cpp  LocalDeviceManagement.cpp  LocalDeviceManagementEmiC.cpp  LocalDeviceManager.cpp
kdrive/src/access/usb/: UsbPort.cpp  UsbPortEnumerator.cpp
kdrive/src/baos/: BaosConnection.cpp  BaosDatapoint.cpp  BaosDatapointDescriptions.cpp  BaosEnumerator.cpp  BaosEvent.cpp  BaosHeartbeat.cpp  BaosParameter.cpp  BaosServerItems.cpp  BaosTimers.cpp
kdrive/src/baos/core/: API.cpp  BaosConnector.cpp  BaosPacketFactory.cpp  BaosProtocolDecoder.cpp  DataPacket.cpp  ErrorCodes.cpp  Exception.cpp  ServerFunction.cpp  ServerItem.cpp  ServiceRunner.cpp  String.cpp  Timer.cpp
kdrive/src/baos/ft12/: FT12Connector.cpp
kdrive/src/baos/protocols/: Protocol.cpp  Protocol12.cpp  Protocol20.cpp  Protocol2x.cpp
kdrive/src/baos/services/: GetDatapointDescription.cpp  GetDatapointValue.cpp  GetDescriptionString.cpp  GetParameterByte.cpp  GetServerItem.cpp  GetTimer.cpp  SetDatapointHistoryCommand.cpp  SetDatapointValue.cpp  SetServerItem.cpp  SetTimer.cpp
kdrive/src/baos/stream/: StreamConnection.cpp  StreamConnector.cpp  StreamConnector12.cpp  StreamConnector20.cpp  StreamConnector2x.cpp
kdrive/src/baos/usb/: UsbConnector.cpp
kdrive/src/connector/: CallbackThread.cpp  Connector.cpp  ConnectorNotificationHandler.cpp  Events.cpp  Packet.cpp  PacketFactory.cpp  PacketNotification.cpp  PacketTrace.cpp  QueueConnector.cpp  ScopedConnectorSignals.cpp  Wait.cpp
kdrive/src/frame/core/: Buffer.cpp  Exception.cpp
kdrive/src/frame/usb/: Frame.cpp  Telegrams.cpp
kdrive/src/ft12/: FT12.cpp  FT12Packetizer.cpp
kdrive/src/io/serial/: SerialPort.cpp  SerialPort_POSIX.cpp  SerialPort_WIN32.cpp
kdrive/src/io/usbhid/: UsbDriver.cpp  UsbVendors.cpp  hid.cpp  hid_WIN32.c
kdrive/src/knx/core/: AddressTranslator.cpp  Buffer.cpp  ByteStream.cpp  Types.cpp
kdrive/src/knx/datapoint/: Datapoint.cpp  DatapointFactory.cpp  FloatConverter.cpp
kdrive/src/knx/defines/: ApciCodes.cpp  CemiCodes.cpp  ControlField1.cpp  DatapointTypes.cpp  KnxLayer.cpp  KnxProperty.cpp  MProp.cpp  MaskVersion.cpp
kdrive/src/pch/: kdrive_pch.h
kdrive/src/utility/: LoggerFormatter.cpp  PropertyCollection.cpp  ScopedSemaphore.cpp
samples/c++/: BaosDatapointDescription.cpp  BaosEnumerator.cpp  BaosEventListener.cpp  BaosIpEnumerator.cpp  BaosLightSwitcher.cpp  BaosMultiConnector.cpp  BaosMultiThreaded.cpp  BaosSerial.cpp  BaosSerialLightSwitcher.cpp  BaosServerItem.cpp  BaosTimer.cpp  BaosUsb.cpp  BaosUsbEnumerator.cpp  CMakeLists.txt
samples/c++/PushButtonDemo/: CMakeLists.txt  PushButtonDemo.pro  PushButtonDemo.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+1402 files in other folders)
